2024-11-25T00:57:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12001231138 # 490
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-25
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 870 1345 / 872 1347
* notice: next accum: outdated-unq outdated-all / unq all: 871 1346 / 873 1348
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-11-10] / [2024-11-24]

2024-11-23T00:55:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11982529262 # 488
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-23
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 869 1344 / 872 1347
* notice: next accum: outdated-unq outdated-all / unq all: 870 1345 / 872 1347
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-08] / []

2024-11-16T00:55:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11865730074 # 481
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-16
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 868 1343 / 872 1347
* notice: next accum: outdated-unq outdated-all / unq all: 869 1344 / 872 1347
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-01] / []

2024-11-14T00:53:16Z: