@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-11-25T00:57:36Z",
+  "timestamp" : "2024-11-27T00:57:13Z",
   "count_outdated" : 1346,
   "uniques_outdated" : 871,
-  "count" : 1348,
-  "uniques" : 873,
+  "count" : 1349,
+  "uniques" : 874,
   "clones" : [
     {
       "timestamp": "2024-11-13T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-11-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-11-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
