@@ -1,3 +1,12 @@
+2024-11-27T00:57:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12041700080 # 492
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-27
+* notice: last 14d: unq all: 1 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 871 1346 / 873 1348
+* notice: next accum: outdated-unq outdated-all / unq all: 871 1346 / 874 1349
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-11-26]
+
 2024-11-25T00:57:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12001231138 # 490
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-25
